--- a/hw1.html
+++ b/hw1.html
@@ -4,49 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Delivery Service</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-  
-  <header style="background-color: rgb(199, 153, 153); padding: 15px;" height="6px">
-    <h2 >FoodExpress</h2>
+  <!-- Header -->
+  <header class="bg-light py-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h2 class="m-0">Food Delivery</h2>
 
-    <nav style="float: right;">
-      <a href="#" style="margin-right: 15px;">Home</a>
-      <a href="#">Contact</a>
-    </nav>
+      <nav>
+        <a href="#" class="me-3">Home</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  
-  <div class="container">
-    <div class="row ">
+  <!-- Main Section -->
+  <main class="container">
+    <div class="row">
 
-      
-      <div class="col-md-8 mb-4" style="background-color: aqua;">
-        <h2>Welcome to FoodExpress</h2>
+      <!-- Left Column (8 parts) -->
+      <div class=" col-md-8 ">
+        <h3>Welcome to Our Service</h3>
         <p>
-          We deliver your favorite meals hot and fresh at your doorstep.
-          Choose from a variety of restaurants and enjoy fast delivery.
+          We deliver delicious and fresh meals right to your doorstep.
+          Enjoy fast delivery and amazing food quality anytime.
         </p>
       </div>
 
-      
-      <div class="col-md-4 text-center">
-        <img src="https://t4.ftcdn.net/jpg/06/16/18/09/240_F_616180960_vUAKd3DdpCZyxw2RtSQGqkZ2FnS60Z7n.jpg"
-            class="img-fluid square"
-             alt="Food Image" >
+      <!-- Right Column (4 parts) -->
+      <div class="col-md-4">
+        <img src="https://images.pexels.com/photos/3434523/pexels-photo-3434523.jpeg?cs=srgb&dl=pexels-bemistermister-3434523.jpg&fm=jpg"  alt="Food Image"  width="300px" height="250px">
       </div>
 
     </div>
-  </div>
+  </main>
 
-  
-  <footer style="background-color: rgb(178, 185, 211); padding: 10px; text-align: center;">
-    © 2025 FoodExpress. All rights reserved.
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3">
+    © 2025 Food Delivery Service
   </footer>
 
   
