--- a/hw3.html
+++ b/hw3.html
@@ -25,7 +25,7 @@
   </h2>
 
   
-  <label class="fw-bold">HTML - 100% complete</label>
+  
   <div class="progress ">
     <div class="progress-bar progress-bar-striped bg-success" style="width: 100%;">
       100%
@@ -33,7 +33,7 @@
   </div>
 
   
-  <label class="fw-bold">CSS</label>
+  
   <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width: 75%;">
       75%
@@ -41,7 +41,7 @@
   </div>
 
   
-  <label class="fw-bold">JavaScript </label>
+  
   <div class="progress ">
     <div class="progress-bar bg-warning" style="width: 50%;">
       50%
@@ -49,7 +49,7 @@
   </div>
 
  
-  <label class="fw-bold">Bootstrap </label>
+  
   <div class="progress ">
     <div class="progress-bar bg-danger" style="width: 25%;">
       25%
@@ -58,7 +58,7 @@
 
   
   
-    <div class="btn-group ">
+    <div class="btn ">
       <button class="btn btn-success">Start</button>
       <button class="btn btn-warning">Pause</button>
       <button class="btn btn-danger">Reset</button>
