--- a/hw4.html
+++ b/hw4.html
@@ -117,12 +117,16 @@
 
 <h3 >Product FAQs</h3>
 
+<div id="productFAQ">
 
-  
-  <div class="card ">
+ 
+  <div class="card">
     <div class="card-header">
-      <a href="#faq1" data-toggle="collapse">What is the return policy?</a>
+      <a class="card-link" data-toggle="collapse" href="#faq1">
+        What is the return policy?
+      </a>
     </div>
+
     <div id="faq1" class="collapse" data-parent="#productFAQ">
       <div class="card-body">
         You can return the product within 7 days of delivery.
@@ -130,11 +134,14 @@
     </div>
   </div>
 
- 
+  
   <div class="card">
     <div class="card-header">
-      <a href="#faq2" data-toggle="collapse">Is warranty included?</a>
+      <a class="card-link" data-toggle="collapse" href="#faq2">
+        Is warranty included?
+      </a>
     </div>
+
     <div id="faq2" class="collapse" data-parent="#productFAQ">
       <div class="card-body">
         Yes, all products come with a 1-year warranty.
@@ -143,13 +150,16 @@
   </div>
 
   
-  <div class="card ">
+  <div class="card">
     <div class="card-header">
-      <a href="#faq3" data-toggle="collapse">Do you offer fast delivery?</a>
+      <a class="card-link" data-toggle="collapse" href="#faq3">
+        Do you offer free shipping?
+      </a>
     </div>
+
     <div id="faq3" class="collapse" data-parent="#productFAQ">
       <div class="card-body">
-        Fast delivery is available in selected cities.
+        Yes, free shipping is available on orders above ₹500.
       </div>
     </div>
   </div>
