--- a/hw6.html
+++ b/hw6.html
@@ -66,7 +66,33 @@
   <label class="form-check-label">
     <input type="radio" class="form-check-input" name="optradio">5
   </label>
-</div><br><br>
+</div>
+<div class="form-check-inline">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input"name="optradio" >6
+  </label>
+</div>
+<div class="form-check-inline ">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input" name="optradio">7
+  </label>
+</div>
+    <div class="form-check-inline ">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input" name="optradio">8
+  </label>
+</div>
+<div class="form-check-inline">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input"name="optradio" >9
+  </label>
+</div>
+<div class="form-check-inline ">
+  <label class="form-check-label">
+    <input type="radio" class="form-check-input" name="optradio">10
+  </label>
+</div>
+    <br><br>
 
 
             <!-- Type of Order -->
